tests/cases/match/errors/match-or-pattern-binding-type.ari
enum Token {
  Small(i32),
  Big(u32),
}

fn main() -> i64 {
  return match Small(1) {
    Small(value) | Big(value) => value as i64,
  };
}
